// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests for StorageView component should render StorageView component with content correctly 1`] = `
<div
  className="StorageView"
>
  <table
    className="StorageView"
  >
    <thead>
      <tr>
        <th
          width="50%"
        >
          Name
        </th>
        <th
          width="20%"
        >
          Unit
        </th>
        <th
          width="20%"
        >
          Quantity
        </th>
        <th
          width="10%"
        >
          Options
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Milk
        </td>
        <td>
          1L
        </td>
        <td>
          2.7
        </td>
        <td>
          <button
            className="StorageView"
            disabled={false}
            onClick={[Function]}
          >
            -
          </button>
          <button
            className="StorageView"
            onClick={[Function]}
          >
            +
          </button>
          <button
            className="StorageView"
            onClick={[Function]}
          >
            Edit
          </button>
          <button
            className="StorageView"
            onClick={[Function]}
          >
            Remove
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Sparkling water
        </td>
        <td>
          0.75L
        </td>
        <td>
          21
        </td>
        <td>
          <button
            className="StorageView"
            disabled={false}
            onClick={[Function]}
          >
            -
          </button>
          <button
            className="StorageView"
            onClick={[Function]}
          >
            +
          </button>
          <button
            className="StorageView"
            onClick={[Function]}
          >
            Edit
          </button>
          <button
            className="StorageView"
            onClick={[Function]}
          >
            Remove
          </button>
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>
          <select
            id="Item"
            name="Item"
            onChange={[Function]}
            value={-1}
          >
            <option
              className="choose"
              value={-1}
            >
              -Choose item-
            </option>
            <option
              value={0}
            >
              Sparkling water
            </option>
            <option
              value={1}
            >
              Apple juice
            </option>
            <option
              value={3}
            >
              Milk
            </option>
          </select>
        </td>
        <td>
          <select
            id="Unit"
            name="Unit"
            onChange={[Function]}
            value={-1}
          >
            <option
              className="choose"
              value={-1}
            >
              -Choose unit-
            </option>
            <option
              value={0}
            >
              0.33L
            </option>
            <option
              value={2}
            >
              0.75L
            </option>
            <option
              value={3}
            >
              1.0L
            </option>
          </select>
        </td>
        <td
          colSpan="2"
        >
          <form
            onSubmit={[Function]}
          >
            <input
              min="0"
              onChange={[Function]}
              step="0.05"
              type="number"
              value={0}
            />
            <input
              disabled={true}
              type="submit"
              value="Add"
            />
          </form>
        </td>
      </tr>
    </tfoot>
  </table>
  <div
    className="modal hide"
  >
    <div
      className="modal-main"
    >
      <span
        className="close"
        onClick={[Function]}
      >
        ×
      </span>
      <h1>
        Change quantity
      </h1>
      <form
        className="Modal"
        onSubmit={[Function]}
      >
        <input
          className="Modal"
          min="0"
          onChange={[Function]}
          step="0.05"
          type="number"
          value={0}
        />
        <input
          className="Modal"
          type="submit"
          value="Update quantity"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`snapshot tests for StorageView component should render empty StorageView component correctly 1`] = `
<div
  className="StorageView"
>
  <table
    className="StorageView"
  >
    <thead>
      <tr>
        <th
          width="50%"
        >
          Name
        </th>
        <th
          width="20%"
        >
          Unit
        </th>
        <th
          width="20%"
        >
          Quantity
        </th>
        <th
          width="10%"
        >
          Options
        </th>
      </tr>
    </thead>
    <tbody />
    <tfoot>
      <tr>
        <td>
          <select
            id="Item"
            name="Item"
            onChange={[Function]}
            value={-1}
          >
            <option
              className="choose"
              value={-1}
            >
              -Choose item-
            </option>
          </select>
        </td>
        <td>
          <select
            id="Unit"
            name="Unit"
            onChange={[Function]}
            value={-1}
          >
            <option
              className="choose"
              value={-1}
            >
              -Choose unit-
            </option>
          </select>
        </td>
        <td
          colSpan="2"
        >
          <form
            onSubmit={[Function]}
          >
            <input
              min="0"
              onChange={[Function]}
              step="0.05"
              type="number"
              value={0}
            />
            <input
              disabled={true}
              type="submit"
              value="Add"
            />
          </form>
        </td>
      </tr>
    </tfoot>
  </table>
  <div
    className="modal hide"
  >
    <div
      className="modal-main"
    >
      <span
        className="close"
        onClick={[Function]}
      >
        ×
      </span>
      <h1>
        Change quantity
      </h1>
      <form
        className="Modal"
        onSubmit={[Function]}
      >
        <input
          className="Modal"
          min="0"
          onChange={[Function]}
          step="0.05"
          type="number"
          value={0}
        />
        <input
          className="Modal"
          type="submit"
          value="Update quantity"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`snapshot tests for StorageViewHead component should render StorageViewHead component correctly 1`] = `
<thead>
  <tr>
    <th
      width="50%"
    >
      Name
    </th>
    <th
      width="20%"
    >
      Unit
    </th>
    <th
      width="20%"
    >
      Quantity
    </th>
    <th
      width="10%"
    >
      Options
    </th>
  </tr>
</thead>
`;

exports[`snapshot tests for StorageViewItem component should render StorageViewItem component correctly 1`] = `
<tr>
  <td>
    Milk
  </td>
  <td>
    1L
  </td>
  <td>
    2.5
  </td>
  <td>
    <button
      className="StorageView"
      disabled={false}
      onClick={[Function]}
    >
      -
    </button>
    <button
      className="StorageView"
      onClick={[Function]}
    >
      +
    </button>
    <button
      className="StorageView"
      onClick={[Function]}
    >
      Edit
    </button>
    <button
      className="StorageView"
      onClick={[Function]}
    >
      Remove
    </button>
  </td>
</tr>
`;

exports[`snapshot tests for StorageViewItem component should render StorageViewItem component with disabled decrement-button correctly 1`] = `
<tr>
  <td>
    Milk
  </td>
  <td>
    1L
  </td>
  <td>
    0.9
  </td>
  <td>
    <button
      className="StorageView"
      disabled={true}
      onClick={[Function]}
    >
      -
    </button>
    <button
      className="StorageView"
      onClick={[Function]}
    >
      +
    </button>
    <button
      className="StorageView"
      onClick={[Function]}
    >
      Edit
    </button>
    <button
      className="StorageView"
      onClick={[Function]}
    >
      Remove
    </button>
  </td>
</tr>
`;

exports[`snapshot tests for StorageViewNewItem component should render StorageViewNewItem component with units and items correctly 1`] = `
<tfoot>
  <tr>
    <td>
      <select
        id="Item"
        name="Item"
        onChange={[Function]}
        value={-1}
      >
        <option
          className="choose"
          value={-1}
        >
          -Choose item-
        </option>
        <option
          value={0}
        >
          Sparkling water
        </option>
        <option
          value={1}
        >
          Apple juice
        </option>
        <option
          value={3}
        >
          Milk
        </option>
      </select>
    </td>
    <td>
      <select
        id="Unit"
        name="Unit"
        onChange={[Function]}
        value={-1}
      >
        <option
          className="choose"
          value={-1}
        >
          -Choose unit-
        </option>
        <option
          value={0}
        >
          0.33L
        </option>
        <option
          value={2}
        >
          0.75L
        </option>
        <option
          value={3}
        >
          1.0L
        </option>
      </select>
    </td>
    <td
      colSpan="2"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          min="0"
          onChange={[Function]}
          step="0.05"
          type="number"
          value={0}
        />
        <input
          disabled={true}
          type="submit"
          value="Add"
        />
      </form>
    </td>
  </tr>
</tfoot>
`;

exports[`snapshot tests for StorageViewNewItem component should render empty StorageViewNewItem component correctly 1`] = `
<tfoot>
  <tr>
    <td>
      <select
        id="Item"
        name="Item"
        onChange={[Function]}
        value={-1}
      >
        <option
          className="choose"
          value={-1}
        >
          -Choose item-
        </option>
      </select>
    </td>
    <td>
      <select
        id="Unit"
        name="Unit"
        onChange={[Function]}
        value={-1}
      >
        <option
          className="choose"
          value={-1}
        >
          -Choose unit-
        </option>
      </select>
    </td>
    <td
      colSpan="2"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          min="0"
          onChange={[Function]}
          step="0.05"
          type="number"
          value={0}
        />
        <input
          disabled={true}
          type="submit"
          value="Add"
        />
      </form>
    </td>
  </tr>
</tfoot>
`;
